# dpi-project

./: README.md
dpi-project/: CHANGELOG.md  DockerFile  README.md  cities.json  dpi-project.cabal  index.html  package.yaml  script.js  style.css
dpi-project/app/: Main.hs
