cabal-version: 2.2

name:           dpi-project
version:        0.1.0.0
build-type:     Simple
license:        BSD-3-Clause
license-file:   LICENSE

executable dpi-project-exe
  main-is:             Main.hs
  hs-source-dirs:      app
  default-language:    Haskell2010

  ghc-options:
    -Wall
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
      base >=4.7 && <5
    , scotty
    , aeson
    , text
    , bytestring
    , wai-middleware-static
    , directory
    , http-types